# swagger.yaml
@@ -164,7 +164,7 @@ components:
             post:
               type: string
               required: true
-    
+
 
 paths:
   /health-check:
@@ -439,7 +439,48 @@ paths:
         required: true
         content:
           $ref: '#/components/schemas/restCreatePostDTO'  
-
+  
+  /posts/{postId}/like:
+    post:
+      security:
+      - Auth: []
+      parameters:
+        - in: path
+          name: postId
+          schema:
+            type: string
+          required: true
+      tags:
+        - Post
+      summary: Operation to create like
+      description: Operation to create like
+      responses:
+        200:
+          description: Like create successfully
+        400:
+          $ref: '#/components/responsesSchemes/badRequest'
+        500:
+          $ref: '#/components/responsesSchemes/internalError'
+    delete:
+      security:
+      - Auth: []
+      parameters:
+        - in: path
+          name: postId
+          schema:
+            type: string
+          required: true
+      tags:
+        - Post
+      summary: Operation to delete like
+      description: Operation to delete like
+      responses:
+        200:
+          description: Like deleted successfully
+        400:
+          $ref: '#/components/responsesSchemes/badRequest'
+        500:
+          $ref: '#/components/responsesSchemes/internalError'
   /comments:
     post:
       tags:
